Added new variables

--- a/config.ini
+++ b/config.ini
@@ -1,3 +1,11 @@
 [Networking]
 Bind: 0.0.0.0
 Port: 25
+[Folders]
+Drop: /var/www/html/jobswa/
+[SMS-Q]
+IncomingPath: /var/www/html/jobs/
+CompletedPath: /usr/local/src/logs/completed-sms/
+[GSMmodem]
+Device: /dev/ttyUSB2
+Baud: 115200
