--- a/config.ini
+++ b/config.ini
@@ -1,11 +1,20 @@
 [Networking]
-Bind: 0.0.0.0
-Port: 25
+bind = 0.0.0.0
+port = 25
+
+[DutySystem]
+dutynumber = +6593822131
+lastnumber = +6597655432
+
 [Folders]
-Drop: /var/www/html/jobswa/
+drop = /var/www/html/jobswa/
+
 [SMS-Q]
-IncomingPath: /var/www/html/jobs/
-CompletedPath: /usr/local/src/logs/completed-sms/
+incomingpath = /var/www/html/jobs/
+completedpath = /usr/local/src/logs/completed-sms/
+smslogs = /usr/local/src/logs/sms-messages.txt
+
 [GSMmodem]
-Device: /dev/ttyUSB2
-Baud: 115200
+device = /dev/ttyUSB2
+baud = 115200
+
