Added SMSC number as a variable to config.ini Updated processSMS accordingly.

--- a/config.ini
+++ b/config.ini
@@ -10,11 +10,16 @@ lastnumber = +0098765432
 drop = /var/www/html/jobswa/
 
 [SMS-Q]
-incomingpath = /var/www/html/jobs/
+incomingpath = /var/www/jobs/
 completedpath = /usr/local/src/logs/completed-sms/
 smslogs = /usr/local/src/logs/sms-messages.txt
 
 [GSMmodem]
-device = /dev/ttyUSB2
+device = /dev/gsmmodem
 baud = 115200
-
+#SingTel Hi
+#SMSC_NUM = '+6596400001'
+#M1
+SMSC_NUM = '+6596845997'
+#Starhub
+#SMSC_NUM = '+6598540020'
