--- a/config.ini
+++ b/config.ini
@@ -14,12 +14,16 @@ incomingpath = /var/www/jobs/
 completedpath = /usr/local/src/logs/completed-sms/
 smslogs = /usr/local/src/logs/sms-messages.txt
 
+[Mail2Msg]
+sendSMS = True
+sendWA = True
+
 [GSMmodem]
 device = /dev/gsmmodem
 baud = 115200
 #SingTel Hi
-#SMSC_NUM = '+6596400001'
+#SMSC_NUM = +6596400001
 #M1
-SMSC_NUM = '+6596845997'
+SMSC_NUM = +6596845997
 #Starhub
-#SMSC_NUM = '+6598540020'
+#SMSC_NUM = +6598540020
