--- a/config.ini
+++ b/config.ini
@@ -13,6 +13,7 @@ drop = /var/www/html/jobswa/
 incomingpath = /var/www/jobs/
 completedpath = /usr/local/src/logs/completed-sms/
 smslogs = /usr/local/src/logs/sms-messages.txt
+GroupChatID=872345082345234
 
 [Mail2Msg]
 sendSMS = True
