--- a/config.ini
+++ b/config.ini
@@ -2,9 +2,11 @@
 bind = 0.0.0.0
 port = 25
 
-[DutySystem]
-dutynumber = +0012345678
-lastnumber = +0098765432
+[MySQL]
+host = localhost
+user = root
+passwd = 
+database = smartMessage
 
 [Folders]
 drop = /var/www/html/jobswa/
