--- a/config.ini
+++ b/config.ini
@@ -12,7 +12,7 @@ database = smartMessage
 drop = /var/www/html/jobswa/
 
 [SMS-Q]
-incomingpath = /var/www/jobs/
+incomingpath = /var/www/html/jobs/
 completedpath = /usr/local/src/logs/completed-sms/
 smslogs = /usr/local/src/logs/sms-messages.txt
 GroupChatID=872345082345234
