New config file to support new processSMS2 script.
New processSMS script will poll DB for jobs, and write incoming SMS to DB. ONLY.

--- a/config.ini
+++ b/config.ini
@@ -1,32 +1,5 @@
-[Networking]
-bind = 0.0.0.0
-port = 25
-
-[MySQL]
-host = localhost
-user = root
-passwd = 
-database = smartMessage
-
-[Folders]
-drop = /var/www/html/jobswa/
-
-[SMS-Q]
-incomingpath = /var/www/html/jobs/
-completedpath = /usr/local/src/logs/completed-sms/
-smslogs = /usr/local/src/logs/sms-messages.txt
-GroupChatID=872345082345234
-
-[Mail2Msg]
-sendSMS = True
-sendWA = True
-
-[GSMmodem]
-device = /dev/gsmmodem
-baud = 115200
-#SingTel Hi
-#SMSC_NUM = +6596400001
-#M1
-SMSC_NUM = +6596845997
-#Starhub
-#SMSC_NUM = +6598540020
+[DB]
+DBHost=smartmessage.beta.sg
+DBUser=root
+DBPass=
+DBName=smartMessage
